[package]
name = "pallet-rbac"
authors = [ "Amar Singh" ]
description = "A pallet for role-based access control"
edition = "2021"
homepage = "https://analog.one"
license = "GPLv3.0"
publish = false
version = "0.0.1"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = [ "derive" ] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false, optional = true }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }

[dev-dependencies]
env_logger = "0.10.0"
lazy_static = "1.4.0"
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", version = "4.0.0-dev" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }

[features]
default = [ "std" ]
std = [ "codec/std", "frame-benchmarking?/std", "frame-support/std", "frame-system/std", "scale-info/std", "sp-core/std", "sp-runtime/std", "sp-std/std" ]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks", "sp-core" ]
try-runtime = [ "frame-support/try-runtime" ]
